--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body{
     background-color: #303030;
 }
-.button.is-light {
+.navbar-item .button.is-light {
     background-color: #f5f5f5;
     border-color: transparent;
     color: rgba(0,0,0,.7);
@@ -30,11 +30,49 @@ body{
 }
 
 .menu{
+    background-color: #303031;
     width: 20%;
 }
+
+.total{
+    display: flex;
+    flex-direction: row;
+}
+
+.main{
+    position: relative;
+    width: 70%;
+}
+
+.main h1{
+    color: white;
+
+}
+
+.hero{
+    opacity: .7;
+}
+
+.c{
+    opacity: 1;
+}
+
+
+
 @media only screen and (max-width: 600px) {
     .menu{
+        background: #1b1212;
         width: 40%;
     }
+    .main{
+        position: relative;
+        width: 100%;
     }
-  }
+    .main h1{
+        font-size: 20px;
+    }
+    .navbar-item .button.is-light {
+        top: 7px;
+
+
+    }
