--- a/style.css
+++ b/style.css
@@ -61,18 +61,36 @@ body{
 
 @media only screen and (max-width: 600px) {
     .menu{
-        background: #1b1212;
         width: 40%;
     }
     .main{
         position: relative;
         width: 100%;
+    
     }
     .main h1{
         font-size: 20px;
     }
     .navbar-item .button.is-light {
         top: 7px;
-
-
     }
+    .menu-list {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        padding: 12px 16px;
+        z-index: 1;
+      }
+      
+      .menu-label:hover .menu-list {
+        display: block;
+      }
+      .total{
+        display: flex;
+        flex-direction: column;
+    }
+
+
+}
