--- a/style.css
+++ b/style.css
@@ -74,23 +74,17 @@ body{
     .navbar-item .button.is-light {
         top: 7px;
     }
-    .menu-list {
+    .menu-list li{
         display: none;
         position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        padding: 12px 16px;
-        z-index: 1;
       }
       
-      .menu-label:hover .menu-list {
-        display: block;
+      .menu-label:hover .menu-list a{
+          display: block;
+
       }
       .total{
         display: flex;
         flex-direction: column;
     }
-
-
 }
